--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ember-cli": "2.5.1",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
+    "ember-cli-cdn": "2.1.0",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-fastboot": "1.0.0-beta.2",
     "ember-cli-htmlbars": "^1.0.3",
